tests/samples/valid/euro_in_string.pn
fn main()
{
	var x = "€";
	end:
}
