tests/samples/invalid/bit_integer_too_big.pn
fn main()
{
	var x: u128 = 0x46252a329482eaf72058e10b93e6f523452da3e4d172f8145c9685;
}
